# secure-voting

./: .editorconfig  .env.example  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.mongo-replication.yml  docker-compose.postgres-replication.yml  docker-compose.prod-replication.yml  docker-compose.redis-replication.yml  docker-compose.yml  install.bat  install.sh  launch.sh  moon.yml  uninstall.bat  uninstall.sh
.github/: rust-ci.yml
.github/workflows/: ci.yml  rust-ci.yml
.moon/: toolchain.yml  toolchains.yml  workspace.yml
apps/backend/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  coverage.txt  coverage_all.out  coverage_all.txt  go.mod  go.sum  moon.yml
apps/backend/cmd/api/: main.go
apps/backend/cmd/compute-runner/: ballots.go  config.go  datasets.go  deps.go  header.go  kafka.go  main.go  params.go  params_test.go  process.go  result.go  types.go
apps/backend/cmd/worker/: main.go
apps/backend/internal/adminsettings/: service.go  service_test.go  types.go
apps/backend/internal/apperr/: apperr.go  apperr_test.go
apps/backend/openapi/: README.md  openapi.yaml
apps/backend/proto/: compute_v1.proto
apps/compute/: Cargo.toml  Dockerfile  clippy.toml  compute.Dockerfile  deny.toml  moon.yml  rust-toolchain.toml
apps/compute/compute-service/: Cargo.toml  README.md
apps/compute/compute-service/src/: build.rs  kafka_server.rs  lib.rs  main.rs  metrics.rs  rpc_server.rs  system_metrics.rs
apps/compute/compute-service/src/kafka_server/: consumer.rs  mod.rs  models.rs  processing.rs  producer.rs
apps/compute/compute-service/src/registry/: mod.rs  voting_rules.rs
apps/compute/compute-service/tests/: service_e2e.rs
apps/compute/proto/: compute_v1.proto
apps/compute/supply-chain/: audits.toml  config.toml
apps/compute/voting-cli/: Cargo.toml  README.md
apps/compute/voting-cli/src/: args.rs  main.rs
apps/compute/voting-cli/src/models/: cvr.rs  mod.rs  rcv.rs
apps/compute/voting-core/: ARCHITECTURE.md  Cargo.toml  README.md
apps/compute/voting-core/src/: errors.rs  lib.rs  matrix.rs  prelude.rs  profile.rs  types.rs  voting_rule.rs
apps/compute/voting-core/src/decider/: condorcet.rs  majority.rs  maxscore.rs  minority.rs  minscore.rs  mod.rs  plurality.rs  threshold.rs
apps/compute/voting-core/src/election/: mod.rs
apps/compute/voting-core/src/matrix/: condorcet.rs  mod.rs  pairwise.rs
apps/compute/voting-core/src/models/: approval.rs  ballot.rs  candidate_id.rs  mod.rs  profile.rs  ranking.rs  scoring.rs
apps/compute/voting-core/src/scorer/: anti_plurality.rs  approval.rs  borda.rs  condorcet.rs  minmax.rs  mod.rs  plurality.rs  scoring.rs  simpson.rs  threshold.rs  zip.rs
apps/compute/voting-core/src/scorer/condorcet/: matrix.rs  mod.rs
apps/compute/voting-core/src/scorer/copeland/: copeland_i.rs  copeland_ii.rs  copeland_iii.rs  mod.rs
apps/compute/voting-core/src/tie_breaker/: fallthrough.rs  mod.rs
apps/compute/voting-core/src/voting_rules/: anti_plurality.rs  approval.rs  black.rs  borda.rs  coombs.rs  copeland.rs  hare.rs  inverse_borda.rs  minmax.rs  mod.rs  nanson.rs  plurality.rs  practical_condorcet.rs  scoring.rs  simpson.rs  threshold.rs  voting_rule.rs
apps/compute/voting-core/src/voting_rules/adaptors/: accept_if.rs  fallback.rs  mod.rs  require_unique.rs  zip_selector.rs
apps/compute/voting-core/src/voting_rules/elimination/: below_average_score.rs  criterion.rs  minscore.rs  mod.rs  rule.rs
apps/compute/voting-core/src/voting_rules/elimination/criterion/: below_average_score.rs  maxscore.rs  minscore.rs  mod.rs
apps/compute/voting-core/src/voting_rules/elimination/stop/: majority_stop.rs  mod.rs  no_early_stop.rs
apps/compute/voting-core/src/voting_rules/q_paretian/: mod.rs  strong_majority.rs  strong_plurality.rs  strongest_majority.rs
apps/compute/voting-core/tests/: anti_plurality_e2e.rs  approval_e2e.rs  black_e2e.rs  borda_e2e.rs  common.rs  coombs_e2e.rs  copeland_e2e.rs  hare_e2e.rs  minimax_e2e.rs  nanson_e2e.rs  plurality_e2e.rs  score_e2e.rs  simpson_e2e.rs
apps/frontend/: .dockerignore  .npmrc  Dockerfile  index.html  moon.yml  nginx.conf  package-lock.json  package.json  tsconfig.json
apps/frontend/nginx/: default.conf
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/app/: App.tsx  (+3 more)
docs/: demo-checklist.md  regression-matrix.md
observability/: otel-collector.yaml
scripts/: e2e_election_lifecycle.sh  e2e_experiment_multi_rule.sh  e2e_invite_only.sh  e2e_smoke.sh  e2e_smoke_experiment.sh  e2e_smoke_vote.sh  e2e_vote_formats.sh
scripts/certs/: generate.sh
scripts/ci/: check_openapi_capabilities.sh  common.sh  run_backup_rotation_check.sh  run_demo_suite.sh  run_e2e_suite.sh  run_integration_suite.sh  run_load_suite.sh  run_mongo_replication_check.sh  run_mtbf_light_check.sh  run_playwright_e2e_suite.sh  run_postgres_replication_check.sh  run_prod_replication_smoke.sh  run_redis_replication_check.sh  run_replication_suite.sh  run_restore_check.sh
scripts/db/: init.sql
scripts/ops/: backup-policy.md  backup_all.sh  backup_mongo.sh  backup_postgres.sh  mtbf-validation.md  prune_old_backups.sh  restore_mongo.sh  restore_postgres.sh
test-datasets/: approval_dataset.csv  approval_dataset.txt  ranking_dataset.csv  ranking_dataset.json  ranking_dataset.txt  score_dataset.csv  score_dataset.txt
tests/e2e/: moon.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/src/: api.ts  election.ts  env.ts  ids.ts  rules.ts  system.ts  test-data.ts
tests/e2e/tests/: auth-session.spec.ts  ballot-validation.spec.ts  capabilities-rules.spec.ts  dataset-import-external-formats.spec.ts  datasets-from-election.spec.ts  election-lifecycle.spec.ts  experiment-run-formats.spec.ts  experiment-run.spec.ts  invite-only.spec.ts  profile-email-verification.spec.ts  system-ops.spec.ts  vote-formats.spec.ts
tests/load/: moon.yml  package-lock.json  package.json  tsconfig.json
tests/load/src/: api.ts  ballot-load.ts  dataset-load.ts  experiment-run-load.ts  jobs-polling-load.ts
(+264 files in other folders)
