[workspace]
resolver = "3"
members = ["compute-service","voting-core"]

[workspace.package]
license = "MIT or Apache-2.0"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }
cargo       = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
todo        = "deny"
dbg_macro   = "deny"

[workspace.lints.rust]
unsafe_code = "warn"
