[workspace]
resolver = "3"
members = ["compute-service", "voting-cli","voting-core"]

[workspace.package]
license = "MIT or Apache-2.0"
edition = "2024"

[workspace.lints.clippy]
cargo                 = { level = "warn", priority = -1 }
complexity            = { level = "warn", priority = -1 }
correctness           = { level = "deny", priority = -1 }
pedantic              = { level = "warn", priority = -1 }
perf                  = { level = "deny", priority = -1 }
restriction           = { level = "allow", priority = -1 }
style                 = { level = "warn", priority = -1 }
dbg_macro             = "deny"
expect_used           = "deny"
panic                 = "deny"
redundant_test_prefix = "warn"
todo                  = "deny"
unwrap_used           = "deny"

[workspace.lints.rust]
unsafe_code = "warn"
