[package]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http"
]
description = "An RPC-service capable of electing a winner in a ranked-ballot voting configuration"
edition = "2024"
keywords = [
  "election",
  "rpc",
  "service",
  "voting"
]
license.workspace=true
name = "compute-service"
repository = "https://github.com/schukark/secure-voting.git"
version = "0.1.0"

build = "src/build.rs"

[dependencies]
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost-types = "0.14.3"
voting-core = {path = "../voting-core", version = "0.1.0"}
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32.1"
scopeguard = "1.2.0"
tonic-tracing-opentelemetry = "0.32.1"
opentelemetry-appender-tracing = "0.31.1"

[lints]
workspace=true

[build-dependencies]
tonic-prost-build = "0.14.2"

[package.metadata.clippy]
config-file = "../../clippy.toml"
