[package]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http"
]
description = "An RPC-service capable of electing a winner in a ranked-ballot voting configuration"
edition = "2024"
keywords = [
  "election",
  "rpc",
  "service",
  "voting"
]
license.workspace=true
name = "compute-service"
repository = "https://github.com/schukark/secure-voting.git"
version = "0.1.0"

build = "src/build.rs"

[[bin]]
name = "compute-service"
path = "src/main.rs"

[dependencies]
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14.2", features = ["_tls-any", "tls-ring"] }
tonic-prost = "0.14.2"
prost-types = "0.14.3"
voting-core = {path = "../voting-core", version = "0.1.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"

[lints]
workspace=true

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
mockall = "0.14.0"

[package.metadata.clippy]
config-file = "../../clippy.toml"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost"]
