[package]
name = "voting-core"
version = "0.1.0"
edition = "2024"

[dependencies]
nutype = "0.6.2"
rayon = "1.11.0"
serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[lints]
workspace=true

[dev-dependencies]
ctor = "0.6.3"
mockall = "0.14.0"
test-case = "3.3.1"

[features]
default = []
serde = ["dep:serde", "nutype/serde"]
