[package]
categories = [
  "algorithms",
  "mathematics",
  "science"
]
description = "Composable Rust framework for defining and running voting rules"
edition = "2024"
keywords = [
  "voting",
  "election",
  "framework",
  "social-choice"
]
license.workspace = true
name = "voting-core"
repository = "https://github.com/schukark/secure-voting.git"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
bon = "3.9.1"
itertools = "0.14.0"
rayon = "1.11.0"
serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

[lints]
workspace=true

[dev-dependencies]
ctor = "0.13.1"
mockall = "0.14.0"
test-case = "3.3.1"

[features]
default = []
serde = ["dep:serde"]

[lib]
path = "src/lib.rs"

[package.metadata.clippy]
config-file = "../../clippy.toml"
